# Ostrich

./: .firebaserc  .gitignore  GEMINI.MD  Makefile  README.md  backend.Dockerfile  firebase.json  sandbox.Dockerfile
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
.github/workflows/: backend-ci.yml  deploy-cloudrun.yml
.jules/: bolt.md
backend/: README.md  pyproject.toml  test_db.py  test_k8s.py  test_ws.py
backend/migrations/models/: 0_20260611171551_init.py  3_20260630133347_add_sandbox_session.py
backend/scripts/: test_db.py  test_k8s.py  test_ws.py
backend/src/: __init__.py  main.py
backend/src/controlplane/: __init__.py  server.py
backend/src/controlplane/core/: auth.py  config.py  logging_config.py
backend/src/controlplane/database/: models.py  schemas.py
backend/src/controlplane/routers/: chat.py  users.py  ws.py
backend/src/controlplane/services/: orchestrator.py
backend/tests/: __init__.py  conftest.py  test_main.py  test_orchestrator.py  test_users.py  test_ws.py
dataconnect/: dataconnect.yaml  seed_data.gql
dataconnect/example/: connector.yaml  queries.gql
dataconnect/schema/: schema.gql
frontend/: .env.production  index.html  main.js  package-lock.json  package.json  style.css  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  config.ts  firebase.js  firebase.ts  index.css  main.tsx  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ChatView.tsx  CodeBlock.tsx  Composer.tsx  Login.tsx  MessageBubble.tsx  MessageList.tsx  StatusBar.tsx  ToolCallCard.tsx
frontend/src/dataconnect-generated/: README.md  index.cjs.js  index.d.ts
frontend/src/dataconnect-generated/.guides/: usage.md
frontend/src/dataconnect-generated/esm/: index.esm.js
frontend/src/hooks/: useChatSocket.ts
infrastructure/: README.md  redis-k8s.yaml
infrastructure/aws/: main.tf
infrastructure/gcp/: README.md  controlplane-rbac.yaml  istio-egress-policy.yaml  litellm-proxy.yaml  main.tf  prometheus.yaml  sandbox-network-policy.yaml  sandbox-warmpool.yaml
package/: .dockerignore  Dockerfile  pyproject.toml
package/migrations/models/: 1_20260612143259_add_firebase_uid.py  2_20260612170144_add_chat_messages.py
package/src/: main.py
package/src/controlplane/: auth.py  db.py  models.py  schemas.py  server.py
package/src/controlplane/routers/: chat.py  users.py
package/src/dataplane/: __init__.py  main.py
package/tests/: conftest.py  test_main.py  test_users.py
sandbox/: README.md  cli.py  main.py  pyproject.toml  requirements.txt  system_prompt.txt
sandbox/src/: agent.py  main.py  protocol.py  tools.py
sandbox/tests/: test_protocol.py  test_tools.py  test_worker.py
system_design/: 01_database_schema.md  02_kubernetes_architecture.md  03_gcp_infrastructure.md  04_user_data_flow.md  05_sandbox_operations.md  06_envoy_proxy_egress.md  07_llm_gateway_integration.md  08_frontend_streaming.md  09_agent_sandbox_integration.md  README.md
