[project]
name = "ostrich-app"
version = "0.1.0"
description = "Core application for the Ostrich platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerich>=0.9.2",
    "fastapi>=0.110.0",
    "firebase-admin>=7.4.0",
    "kubernetes>=36.0.2",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.2",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "tomlkit>=0.15.0",
    "tortoise-orm[asyncpg]>=0.25.4",
    "uvicorn>=0.28.0",
    "websockets>=16.0",
]

[[project.authors]]
name = "Ostrich Team"
email = "team@ostrich.internal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.aerich]
tortoise_orm = "src.controlplane.core.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.3.0", "httpx>=0.27.0"]
