[project]
name = "ostrich-app"
version = "0.1.0"
description = "Core application for the Ostrich platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerich>=0.9.2",
    "fastapi>=0.110.0",
    "firebase-admin>=7.4.0",
    "pydantic-settings>=2.14.1",
    "tomlkit>=0.15.0",
    "tortoise-orm[asyncpg]>=0.25.4",
    "uvicorn>=0.28.0",
]

[[project.authors]]
name = "Ostrich Team"
email = "team@ostrich.internal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.aerich]
tortoise_orm = "src.controlplane.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.3.0", "httpx>=0.27.0"]
