[project]
name = "ostrich-sandbox"
version = "0.1.0"
description = "Ostrich autonomous coding agent sandbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage>=2.14.0",
    "langchain-community>=0.0.10",
    "langchain-core==0.3.31",
    "langgraph==0.2.65",
    "litellm>=1.0.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-exporter-prometheus>=0.47b0",
    "opentelemetry-sdk>=1.26.0",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.7",
    "redis==5.2.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
